--- a/config/settings.yml
+++ b/config/settings.yml
@@ -2,7 +2,7 @@ Default: &defaults
   host: "*4" # any IPv4 host
   port: 3000
   approot: "http://localhost:3000"
-  copyright: Copyright: CodeMonkeys.nl 2012
+  copyright: Copyright CodeMonkeys.nl 2011
   #analytics: UA-YOURCODE
 
 Development:
