--- a/milkmachine.cabal
+++ b/milkmachine.cabal
@@ -67,6 +67,7 @@ library
                  , http-conduit                  >= 1.8        && < 1.9
                  , directory                     >= 1.1        && < 1.3
                  , warp                          >= 1.3        && < 1.4
+                 , unordered-containers          >= 0.2.2.1
                  , time
                  , http-types                    >= 0.7.3.0.1
                  , aeson
