--- a/milkmachine.cabal
+++ b/milkmachine.cabal
@@ -54,7 +54,7 @@ library
                  , bytestring                    >= 0.9        && < 0.11
                  , text                          >= 0.11       && < 0.12
                  , persistent                    >= 1.0        && < 1.1
-                 , persistent-mongoDB            >= 1.0        && < 1.1
+                 , persistent-postgresql         >= 1.0        && < 1.1
                  , template-haskell
                  , hamlet                        >= 1.1        && < 1.2
                  , shakespeare-css               >= 1.0        && < 1.1
@@ -68,6 +68,7 @@ library
                  , directory                     >= 1.1        && < 1.3
                  , warp                          >= 1.3        && < 1.4
                  , unordered-containers          >= 0.2.2.1
+                 , heroku                        >= 0.1
                  , time
                  , http-types                    >= 0.7.3.0.1
                  , aeson
