changed handling of uid

--- a/config/postgresql.yml
+++ b/config/postgresql.yml
@@ -1,6 +1,6 @@
 Default: &defaults
   user: milkmachine
-  password: milkmachine
+  password:
   host: localhost
   port: 5432
   database: milkmachine
